# sisidm_sose2021

./: DATA DISTRIBUTION SERVICE (DDS).pptx  DDS_share.pptx  DDS_share_v4.pptx  DDS_share_v44.pptx  DDS_share_v477.pptx  README.md
.github/workflows/: docToolChain.yml  main.yml
Aufgaben/: SIM-04U-A-8-ADOLPH-Christian-KAATZ-Julian.docx  SIM-04U-B-8-ADOLPH-Christian-KAATZ-Julian.docx
SIM_07U_B/: CMakeLists.txt  client.cpp  client.py  main.cpp  message.pb.cc  message.pb.h  message_pb2.py  server.py
SIM_07U_B/proto/: message.proto
SIM_08_U/: py_node_reply.py  py_node_request.py
SIM_08_U/proto/: service.proto  service_pb2.py  service_pb2_grpc.py
SIM_13U/DB_Parkplatz/: DB_ParkingSpace.py
SIM_13U/OS_FlightTracker/: OS_FlightTracker.html
SIM_13U/OS_FlightTracker/js/: opensky_tracker.js  opensky_tracker.min.js
begleit/: .gitignore  TODO.txt  arc42-template-DE.tex  gradle.properties  readme.md
